test/libsolidity/syntaxTests/arrayLength/invalid_expression_2.sol
contract C {
    uint[true/1] ids;
}
// ----
// TypeError: (22-28): Invalid array length, expected integer literal or constant expression.
